--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,7 @@ DateTime==4.3
 defusedxml==0.6.0
 distlib==0.3.1
 dj-database-url==0.5.0
-Django==3.1.13
+Django>=3.1.13
 django-allauth==0.44.0
 django-bootstrap4==2.3.1
 django-compat==1.0.15
@@ -32,7 +32,7 @@ idna==2.8
 itsdangerous==1.1.0
 joblib==0.17.0
 Js2Py==0.70
-lxml==4.6.3
+lxml>=4.6.3
 MarkupSafe==1.1.1
 oauthlib==3.0.1
 packaging==20.4
@@ -47,7 +47,7 @@ pySmartDL==1.3.4
 python-dateutil==2.8.1
 python3-openid==3.1.0
 pytz==2019.1
-PyYAML==5.4
+PyYAML>=5.4
 regex==2020.10.28
 requests==2.21.0
 requests-file==1.5.1
@@ -60,7 +60,7 @@ SpeechRecognition==3.8.1
 sqlparse==0.3.0
 tqdm==4.51.0
 tzlocal==2.1
-urllib3==1.26.5
+urllib3>=1.26.5
 virtualenv==20.1.0
 webencodings==0.5.1
 whitenoise==5.2.0
