--- a/.github/workflows/Deploy to Fly.yml
+++ b/.github/workflows/Deploy to Fly.yml
@@ -1,8 +1,10 @@
 name: Deploy to Fly
 on:
-  pull_request:
+  push:
     branches:
       - main
+  pull_request:
+
 jobs:
   deploy:
     name: Deploy app
