--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ django-allauth==0.53.1
 django-bootstrap4==22.3
 django-crispy-forms==2.0
 djangorestframework==3.14.0
+gunicorn==20.1.0
 idna==3.4
 oauthlib==3.2.2
 pycparser==2.21
