--- a/fly.toml
+++ b/fly.toml
@@ -1,31 +1,33 @@
-# fly.toml file generated for somachar on 2023-03-31T11:34:54+06:00
+# fly.toml file generated for quiet-sunset-3457 on 2023-03-31T14:51:18+06:00
 
-app = "somachar"
+app = "quiet-sunset-3457"
 kill_signal = "SIGINT"
-kill_timeout = 500
+kill_timeout = 5
+mounts = []
 primary_region = "sin"
+processes = []
 
 [env]
   PORT = "8000"
 
+[[services]]
+  internal_port = 8000
+  processes = ["app"]
+  protocol = "tcp"
+  [services.concurrency]
+    hard_limit = 25
+    soft_limit = 20
+    type = "connections"
+
+  [[services.ports]]
+    force_https = true
+    handlers = ["http"]
+    port = 80
+
+  [[services.ports]]
+    handlers = ["tls", "http"]
+    port = 443
+
 [[statics]]
   guest_path = "/code/static"
   url_prefix = "/static/"
-
-[[services]]
-  protocol = "tcp"
-  internal_port = 8000
-  processes = ["app"]
-
-  [[services.ports]]
-    port = 80
-    handlers = ["http"]
-    force_https = true
-
-  [[services.ports]]
-    port = 443
-    handlers = ["tls", "http"]
-  [services.concurrency]
-    type = "connections"
-    hard_limit = 25
-    soft_limit = 20
