--- a/.github/workflows/Deploy to Fly.yml
+++ b/.github/workflows/Deploy to Fly.yml
@@ -2,16 +2,14 @@ name: Deploy to Fly
 on:
   push:
     branches:
-#      - main
-  pull_request:
+      - main
 
 jobs:
   deploy:
     name: Deploy app
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      
+      - uses: actions/checkout@v4
       - uses: superfly/flyctl-actions/setup-flyctl@master
       - run: flyctl deploy --remote-only
         env:
