--- a/fly.toml
+++ b/fly.toml
@@ -1,4 +1,7 @@
-# fly.toml file generated for somachar on 2023-04-01T15:09:41+06:00
+# fly.toml app configuration file generated for somachar on 2024-03-07T11:25:16+06:00
+#
+# See https://fly.io/docs/reference/configuration/ for information about how to use this file.
+#
 
 app = "somachar"
 kill_signal = "SIGINT"
